--- a/index.html
+++ b/index.html
@@ -170,7 +170,15 @@
               </div>
               <div class="project-content">
                 <h4>Budget Tracker</h4>
-                <p>A Fullstack Budget Tracker web app using NEXT.js</p>
+                <p>
+                  A Fullstack Budget Tracker web app.
+                  <span>
+                    <br /><br />
+                    <span style="text-decoration: underline">Tech Stack:</span>
+                    NEXT.js, PostgreSQL, Drizzle ORM, Tailwind, Clerk, Recharts
+                    etc
+                  </span>
+                </p>
                 <div class="project-btn-div">
                   <a
                     href="https://github.com/hamzaa-001/FullStack-Budget-Tracker"
@@ -193,7 +201,14 @@
               </div>
               <div class="project-content">
                 <h4>Kicks</h4>
-                <p>A modern shoe brand website.</p>
+                <p>
+                  A modern shoe brand website.
+                  <span>
+                    <br /><br />
+                    <span style="text-decoration: underline">Tech Stack:</span>
+                    NEXT.js, Tailwind CSS, Shadcn UI, Goober, Redux etc
+                  </span>
+                </p>
                 <div class="project-btn-div">
                   <a href="https://github.com/hamzaa-001/Kicks" target="_blank"
                     ><button class="project-btn">Code</button></a
@@ -214,7 +229,14 @@
               </div>
               <div class="project-content">
                 <h4>Gemini Clone</h4>
-                <p>A functional gemini clone using React.</p>
+                <p>
+                  A functional gemini clone using React.
+                  <span>
+                    <br /><br />
+                    <span style="text-decoration: underline">Tech Stack:</span>
+                    React, Tailwind CSS, Vite, Goober, Gemini API, Redux etc
+                  </span>
+                </p>
                 <div class="project-btn-div">
                   <a
                     href="https://github.com/hamzaa-001/Gemini-Clone"
@@ -237,7 +259,14 @@
               </div>
               <div class="project-content">
                 <h4>Brainwave</h4>
-                <p>A launching website for a powerful AI tool using React.</p>
+                <p>
+                  A launching website for a powerful AI tool using React.
+                  <span>
+                    <br /><br />
+                    <span style="text-decoration: underline">Tech Stack:</span>
+                    React, Tailwind CSS, Vite, Figma, vercel etc
+                  </span>
+                </p>
                 <div class="project-btn-div">
                   <a
                     href="https://github.com/hamzaa-001/Brainwave"
@@ -259,6 +288,17 @@
             <div class="skill-wrapper">
               <h4>Stacks</h4>
               <p class="f-para">Software and tools I use regularly.</p>
+
+              <div class="skill-1">
+                <div class="skill-img">
+                  <img src="assets/Images/next.png" alt="" />
+                </div>
+                <div class="skill-content">
+                  <h4>Next js</h4>
+                  <p>Full-Stack React Framework</p>
+                </div>
+              </div>
+
               <div class="skill-1">
                 <div class="skill-img">
                   <img src="assets/Images/React.png" alt="" />
@@ -266,16 +306,6 @@
                 <div class="skill-content">
                   <h4>React</h4>
                   <p>Dynamic, Component-Based, UI Library.</p>
-                </div>
-              </div>
-
-              <div class="skill-1">
-                <div class="skill-img">
-                  <img src="assets/Images/javascript.png" alt="" />
-                </div>
-                <div class="skill-content">
-                  <h4>JavaScript</h4>
-                  <p>Dynamic, interactive, scripting.</p>
                 </div>
               </div>
 
