feat:/New Peoject

--- a/index.html
+++ b/index.html
@@ -166,6 +166,36 @@
 
             <div class="project-1">
               <div class="project-img">
+                <img src="assets/Images/Meta Blog.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Meta Blog</h4>
+                <p>
+                  A full-stack blog app with dashboard.
+                  <span>
+                    <br /><br />
+                    <span style="text-decoration: underline">Tech Stack:</span>
+                    NEXT JS, Tailwind, MongoDB, Clerk, Shadcn Email JS, etc.
+                  </span>
+                </p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/hamzaa-001/Meta-Blog"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://metaa-blog.vercel.app/"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
                 <img src="assets/Images/budget.jpg" alt="" />
               </div>
               <div class="project-content">
@@ -216,36 +246,6 @@
                   <a
                     style="margin-left: 5px"
                     href="https://kicks-blue.vercel.app/"
-                    target="_blank"
-                    ><button class="project-btn">Live Demo</button></a
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/Gemini.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Gemini Clone</h4>
-                <p>
-                  A functional gemini clone using React.
-                  <span>
-                    <br /><br />
-                    <span style="text-decoration: underline">Tech Stack:</span>
-                    React, Tailwind CSS, Vite, Goober, Gemini API, Redux etc
-                  </span>
-                </p>
-                <div class="project-btn-div">
-                  <a
-                    href="https://github.com/hamzaa-001/Gemini-Clone"
-                    target="_blank"
-                    ><button class="project-btn">Code</button></a
-                  >
-                  <a
-                    style="margin-left: 5px"
-                    href="https://geminiclone-neon.vercel.app/"
                     target="_blank"
                     ><button class="project-btn">Live Demo</button></a
                   >
