fix:/UI changes

--- a/about.html
+++ b/about.html
@@ -46,7 +46,9 @@
             <img src="assets/Images/profile.jpeg" alt="" />
           </div>
           <h3>Hamza Shahid <br /><span>@Devmax_</span></h3>
-          <button class="close-btn"><i class="bx bx-chevron-left"></i></button>
+          <button class="close-btn">
+            <i class="bx bx-message-square-x"></i>
+          </button>
         </div>
         <div class="links-wrapper">
           <a href="index.html">
@@ -197,8 +199,8 @@
                         <p>Faisalabad, Pakistan - Full Time</p>
                       </div>
                       <div class="career-point-content-right">
-                        <h4>2+ months</h4>
-                        <p>April 2023 - Present</p>
+                        <h4>6+ months</h4>
+                        <p>Jan 2024 - Present</p>
                       </div>
                     </div>
                   </div>
@@ -230,8 +232,8 @@
                         <p>Faisalabad, Pakistan - internship</p>
                       </div>
                       <div class="career-point-content-right">
-                        <h4>5+ months</h4>
-                        <p>Nov 2023 - March 2024</p>
+                        <h4>6+ months</h4>
+                        <p>July 2023 - Jan 2024</p>
                       </div>
                     </div>
                   </div>
@@ -264,7 +266,7 @@
                       </div>
                       <div class="career-point-content-right">
                         <h4>8+ months</h4>
-                        <p>Apr 2023 - Nov 2023</p>
+                        <p>Nov 2022 - Jun 2023</p>
                       </div>
                     </div>
                   </div>
