--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,9 @@
             <img src="assets/Images/profile.jpeg" alt="" />
           </div>
           <h3>Hamza Shahid <br /><span>@Devmax_</span></h3>
-          <button class="close-btn"><i class="bx bx-chevron-left"></i></button>
+          <button class="close-btn">
+            <i class="bx bx-message-square-x"></i>
+          </button>
         </div>
         <div class="links-wrapper">
           <a href="index.html">
