--- a/project.html
+++ b/project.html
@@ -46,7 +46,9 @@
             <img src="assets/Images/profile.jpeg" alt="" />
           </div>
           <h3>Hamza Shahid <br /><span>@Devmax_</span></h3>
-          <button class="close-btn"><i class="bx bx-chevron-left"></i></button>
+          <button class="close-btn">
+            <i class="bx bx-message-square-x"></i>
+          </button>
         </div>
         <div class="links-wrapper">
           <a href="index.html">
@@ -151,6 +153,52 @@
 
             <div class="project-1">
               <div class="project-img">
+                <img src="assets/Images/Meta Blog.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Meta Blog</h4>
+                <p>A full-stack blog app with dashboard using Next.js.</p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/hamzaa-001/Meta-Blog"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://metaa-blog.vercel.app/"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
+                <img src="assets/Images/budget.jpg" alt="" />
+              </div>
+              <div class="project-content">
+                <h4>Budget Tracker</h4>
+                <p>A Fullstack Budget Tracker web app using NEXT.js</p>
+                <div class="project-btn-div">
+                  <a
+                    href="https://github.com/hamzaa-001/FullStack-Budget-Tracker"
+                    target="_blank"
+                    ><button class="project-btn">Code</button></a
+                  >
+                  <a
+                    style="margin-left: 5px"
+                    href="https://full-stack-budget-tracker.vercel.app"
+                    target="_blank"
+                    ><button class="project-btn">Live Demo</button></a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="project-1">
+              <div class="project-img">
                 <img src="assets/Images/Gemini.jpg" alt="" />
               </div>
               <div class="project-content">
@@ -188,29 +236,6 @@
                   <a
                     style="margin-left: 5px"
                     href="https://brainwave-six-kappa.vercel.app/"
-                    target="_blank"
-                    ><button class="project-btn">Live Demo</button></a
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="project-1">
-              <div class="project-img">
-                <img src="assets/Images/budget.jpg" alt="" />
-              </div>
-              <div class="project-content">
-                <h4>Budget Tracker</h4>
-                <p>A Fullstack Budget Tracker web app using NEXT.js</p>
-                <div class="project-btn-div">
-                  <a
-                    href="https://github.com/hamzaa-001/FullStack-Budget-Tracker"
-                    target="_blank"
-                    ><button class="project-btn">Code</button></a
-                  >
-                  <a
-                    style="margin-left: 5px"
-                    href="https://full-stack-budget-tracker.vercel.app"
                     target="_blank"
                     ><button class="project-btn">Live Demo</button></a
                   >
