--- a/readcv.html
+++ b/readcv.html
@@ -50,7 +50,7 @@
                 <h3>
                     Hamza Shahid <br><span>@Devmax_</span>
                 </h3>
-                <button class="close-btn"><i class='bx bx-chevron-left' ></i></button>
+                <button class="close-btn"><i class='bx bx-message-square-x'></i></i></button>
             </div>
             <div class="links-wrapper">
                 <a href="index.html">
@@ -156,17 +156,17 @@
                         </div>
                         <div class="contact-info">
                             <span class="email">Email: </span>
-                            <span class="email-val">muhammadhamzashahid31@gmail.com</span>
+                            <span class="email-val">for.hamza007@gmail.com</span>
                             <!-- <span class="separator"></span> -->
                             <br>
                             <span class="phone">Phone: </span>
-                            <span class="phone-val">+92 344 7722136</span>
+                            <span class="phone-val">+92 327 8097004</span>
                         </div>
                 
                         <div class="about">
-                            <span class="position">Front-End Developer </span>
+                            <span class="position">Summary</span>
                             <span class="desc">
-                                I am a front-end developer with more than enough experience writing html, css, and js. I'm
+                                I am a web developer with more than enough experience writing html, css, and js. I'm
                                 motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
                             </span>
                         </div>
@@ -177,20 +177,31 @@
                             <div class="section__list">
                                 <div class="section__list-item">
                                     <div class="left">
+                                        <div class="name">Devontix solutions</div>
+                                        <div class="addr">Faisalabad, Pakistan</div>
+                                        <div class="duration">Jan 2024 - Present</div>
+                                    </div>
+                                    <div class="right">
+                                        <div class="right-name">Web Developer</div>
+                                        <div class="desc">6+ months</div>
+                                    </div>
+                                </div>
+                                <div class="section__list-item">
+                                    <div class="left">
                                         <div class="name">Tecnsol</div>
                                         <div class="addr">Faisalabad, Pakistan</div>
-                                        <div class="duration">Nov 2023 - Present</div>
+                                        <div class="duration">July 2023 - Jan 2024</div>
                                     </div>
                                     <div class="right">
                                         <div class="right-name">Frontend Dev</div>
-                                        <div class="desc">3+ months</div>
+                                        <div class="desc">6+ months</div>
                                     </div>
                                 </div>
                                 <div class="section__list-item">
                                     <div class="left">
                                         <div class="name">Nexus Solutions</div>
                                         <div class="addr">Faisalabad, Pakistan</div>
-                                        <div class="duration">Apr 2023 - Nov 2023</div>
+                                        <div class="duration">Nov 2022 - Jun 2023</div>
                                     </div>
                                     <div class="right">
                                         <div class="right-name">Support Specialist</div>
@@ -203,17 +214,7 @@
                         <div class="section">
                             <div class="section__title">Education</div>
                             <div class="section__list">
-                                <div class="section__list-item">
-                                    <div class="left">
-                                        <div class="name">GCUF</div>
-                                        <div class="addr">Faisalabad, Pakistan</div>
-                                        <div class="duration">Oct 2022 - Oct 2026</div>
-                                    </div>
-                                    <div class="right">
-                                        <div class="right-name">Software Engineer</div>
-                                        <!-- <div class="desc">did This and that</div> -->
-                                    </div>
-                                </div>
+                                
                                 <div class="section__list-item">
                                     <div class="left">
                                         <div class="name">Students' Inn College</div>
@@ -256,19 +257,19 @@
                             <div class="skills">
                                 <div class="skills__item">
                                     <div class="left">
+                                        <div class="name skill-name">Next.js</div>
+                                    </div>
+                                </div>
+
+                                <div class="skills__item">
+                                    <div class="left">
                                         <div class="name skill-name">React</div>
                                     </div>
                                 </div>
 
                                 <div class="skills__item">
                                     <div class="left">
-                                        <div class="name skill-name">GSAP</div>
-                                    </div>
-                                </div>
-
-                                <div class="skills__item">
-                                    <div class="left">
-                                        <div class="name skill-name">Javascript</div>
+                                        <div class="name skill-name">TypeScript</div>
                                     </div>
                                 </div>
                             </div>
