--- a/skills.html
+++ b/skills.html
@@ -47,7 +47,7 @@
           </div>
           <h3>Hamza Shahid <br /><span>@Devmax_</span></h3>
           <button class="close-btn">
-            <i class="bx bx-chevron-left"></i>
+            <i class="bx bx-message-square-x"></i>
           </button>
         </div>
         <div class="links-wrapper">
