--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <h3>Hamza Shahid <br /><span>@Devmax_</span></h3>
           <button class="close-btn">
-            <i class="bx bx-chevron-left"></i>
+            <i class="bx bx-message-square-x"></i>
           </button>
         </div>
         <div class="links-wrapper">
@@ -255,7 +255,7 @@
 
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/Brainwave.jpg" alt="" />
+                <img src="assets/Images/Brainwave.png" alt="" />
               </div>
               <div class="project-content">
                 <h4>Brainwave</h4>
