fix:/UI changes

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/Brainwave.png" alt="" />
+                <img src="assets/Images/brainwave.png" alt="" />
               </div>
               <div class="project-content">
                 <h4>Brainwave</h4>
