--- a/project.html
+++ b/project.html
@@ -222,7 +222,7 @@
 
             <div class="project-1">
               <div class="project-img">
-                <img src="assets/Images/Brainwave.jpg" alt="" />
+                <img src="assets/Images/brainwave.png" alt="" />
               </div>
               <div class="project-content">
                 <h4>Brainwave</h4>
